test: add hello using cuda nvcc
Signed-off-by: Bamboo1 <zyzhu2001@gmail.com>

--- a/asst3/saxpy/Makefile
+++ b/asst3/saxpy/Makefile
@@ -36,7 +36,7 @@ dirs:
 		mkdir -p $(OBJDIR)/
 
 clean:
-		rm -rf $(OBJDIR) *.ppm *~ $(EXECUTABLE)
+		rm -rf $(OBJDIR) *.ppm *~ $(EXECUTABLE) hello
 
 $(EXECUTABLE): dirs $(OBJS)
 		$(CXX) $(CXXFLAGS) -o $@ $(OBJS) $(LDFLAGS)
@@ -46,3 +46,6 @@ $(OBJDIR)/%.o: %.cpp
 
 $(OBJDIR)/%.o: %.cu
 		$(NVCC) $< $(NVCCFLAGS) -c -o $@
+
+hello: hello.cu
+	nvcc -O3 -o hello hello.cu
