extra credit(gemm): block martrix and memory layout change
Signed-off-by: Bamboo1 <zyzhu2001@gmail.com>

--- a/gemm_extra_credit/.gitignore
+++ b/gemm_extra_credit/.gitignore
@@ -1,3 +1,21 @@
 objs/
 *.swp
 gemm/gemm
+
+# linux executable files
+*
+!*.*
+!*/
+
+# .o in objs/
+**/objs/
+**/*.o
+
+# .clangd/
+**/.clangd/
+
+# compile_commands.json in any directory
+**/compile_commands.json
+
+# ppm image
+**/*.ppm
