asst3(part1): re-implement the SAXPY function
Signed-off-by: Bamboo1 <zyzhu2001@gmail.com>

--- a/asst3/saxpy/Makefile
+++ b/asst3/saxpy/Makefile
@@ -44,7 +44,7 @@ $(EXECUTABLE): dirs $(OBJS)
 $(OBJDIR)/%.o: %.cpp
 		$(CXX) $< $(CXXFLAGS) -c -o $@
 
-$(OBJDIR)/%.o: %.cu
+$(OBJDIR)/%.o: saxpy.cu
 		$(NVCC) $< $(NVCCFLAGS) -c -o $@
 
 hello: hello.cu
